feat: initial commit on new react branch

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2>What is SASS?</h2>
+					<h2>What is React?</h2>
 					<p>An extension language for CSS</p>
 					<p>It's rich feature set allows developers to <span class="orange-txt">efficiently write elegant, well-structured</span> stylesheets.</p>
 				</section>
